--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -760,10 +760,15 @@
     </p>
 
     <p>
-        Copia el texto de ejemplo anterior, pégalo en el bloc de notas, cambia el valor de <i>N\u00FAmero</i> por el valor en
-        <i>Empresa.json > Pr\u00F3ximoN\u00FAmeroDocumentoElectr\u00F3nicoPruebas</i>, el <i>Prefijo</i> por <i>SETP</i> y guárdalo con el nombre
-        <i>VT-yyyy-MM-dd HH-mm-ss.json</i>, por ejemplo VT-2021-01-26 23-29-00.json si la fecha y hora actual es 26 de enero de 2021 a las 11:29 pm.
-        Ejecuta <b>SimpleOps</b> y 
+        Copia el texto JSON de ejemplo anterior, pégalo en el bloc de notas, cambia el valor de <i>N\u00FAmero</i> por el valor en
+        <i>Empresa.json > Pr\u00F3ximoN\u00FAmeroDocumentoElectr\u00F3nicoPruebas</i> más el valor de <i>PrimerN\u00FAmeroFacturaAutorizada</i>,
+        el <i>Prefijo</i> por <i>SETP</i> y guárdalo con el nombre <i>VT-yyyy-MM-dd HH-mm-ss.json</i>, por ejemplo <i>VT-2021-01-26 23-29-00.json</i> 
+        si la fecha y hora actual es 26 de enero de 2021 a las 11:29 pm.
+        Ejecuta <b>SimpleOps</b> y copia y pega el archivo anterior en <i>[CarpetaProgramas]\SimpleOps\Programa Tercero\Integración SimpleOps</i>.
+        Unos segundos después te aparecerá en la misma carpeta un archivo <i>VT-yyyy-MM-dd HH-mm-ss.ok</i> que significa que la factura electrónica fue
+        exitosamente generada y si lo abres con el bloc de notas encontrarás las rutas al PDF de la representación gráfica y al XML. Si te aparece 
+        un archivo <i>VT-yyyy-MM-dd HH-mm-ss.error</i>, significa que hubo un error que podrás leer abriendo este archivo con el bloc
+        de notas.
     </p>
 
 </body>
