--- a/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
+++ b/SimpleOps/Guías/Instalación y Habilitación Facturación Electrónica.html
@@ -76,6 +76,7 @@
         <li><a href="#paso8">Solicitud de la Resolución de Facturación Electrónica a la DIAN</a></li>
         <li><a href="#paso9">Configuración de Modo Producción</a></li>
         <li><a href="#paso10">Facturación Electrónica</a></li>
+        <li><a href="#paso11">Facturación Electrónica usando Excel (Opcional)</a></li>
     </ul>
 
     <h2 id="paso1">1. Habilitación de Pruebas en la DIAN</h2>
@@ -754,22 +755,59 @@
     </p>
 
     <p>
-        Para probar el modo integración con terceros cambia nuevamente al modo de pruebas para evitar generar facturas legales:
-        En la carpeta <i>[CarpetaProgramas]\SimpleOps\Opciones</i>, elimina el archivo <i>Empresa.json</i>, haz una copia de
+        Para probar el modo de integración con terceros cambia al modo de pruebas para evitar generar facturas legales:
+        en la carpeta <i>[CarpetaProgramas]\SimpleOps\Opciones</i> elimina el archivo <i>Empresa.json</i>, haz una copia de
         <i>Empresa - Pruebas.json</i> y renombra la copia a <i>Empresa.json</i>.
     </p>
 
     <p>
-        Copia el texto JSON de ejemplo anterior, pégalo en el bloc de notas, cambia el valor de <i>N\u00FAmero</i> por el valor en
+        Copia el texto JSON de ejemplo, pégalo en el bloc de notas, cambia el valor de <i>N\u00FAmero</i> por el valor en
         <i>Empresa.json > Pr\u00F3ximoN\u00FAmeroDocumentoElectr\u00F3nicoPruebas</i> más el valor de <i>PrimerN\u00FAmeroFacturaAutorizada</i>,
-        el <i>Prefijo</i> por <i>SETP</i> y guárdalo con el nombre <i>VT-yyyy-MM-dd HH-mm-ss.json</i>, por ejemplo <i>VT-2021-01-26 23-29-00.json</i> 
+        el <i>Prefijo</i> por <i>SETP</i> y guárdalo con el nombre <i>VT-yyyy-MM-dd HH-mm-ss.json</i>, por ejemplo <i>VT-2021-01-26 23-29-00.json</i>
         si la fecha y hora actual es 26 de enero de 2021 a las 11:29 pm.
-        Ejecuta <b>SimpleOps</b> y copia y pega el archivo anterior en <i>[CarpetaProgramas]\SimpleOps\Programa Tercero\Integración SimpleOps</i>.
-        Unos segundos después te aparecerá en la misma carpeta un archivo <i>VT-yyyy-MM-dd HH-mm-ss.ok</i> que significa que la factura electrónica fue
-        exitosamente generada y si lo abres con el bloc de notas encontrarás las rutas al PDF de la representación gráfica y al XML. Si te aparece 
+        Ejecuta <b>SimpleOps</b> y copia y pega (no lo cortes) el archivo JSON en <i>[CarpetaProgramas]\SimpleOps\Programa Tercero\Integración SimpleOps</i>.
+        Unos segundos después aparecerá en la misma carpeta un archivo <i>VT-yyyy-MM-dd HH-mm-ss.ok</i> que significa que la factura electrónica fue
+        generada exitosamente y si lo abres con el bloc de notas encontrarás las rutas al PDF de la representación gráfica y al XML. Si aparece
         un archivo <i>VT-yyyy-MM-dd HH-mm-ss.error</i>, significa que hubo un error que podrás leer abriendo este archivo con el bloc
         de notas.
     </p>
+
+    <p>
+        Una vez finalices tus ensayos, podrás generar tu primera factura electrónica legal con el modo de integración con terceros.
+        Suspende la ejecución y cambia al modo de producción:
+        en la carpeta <i>[CarpetaProgramas]\SimpleOps\Opciones</i> elimina el archivo <i>Empresa.json</i>, haz una copia de
+        <i>Empresa - Producción.json</i> y renombra la copia a <i>Empresa.json</i>.
+    </p>
+
+    <p>
+        Copia el texto JSON de ejemplo, pégalo en el bloc de notas, cambia el valor de <i>N\u00FAmero</i> por el valor en
+        <i>Empresa.json > PrimerN\u00FAmeroFacturaAutorizada</i>,
+        el <i>Prefijo</i> por <i>Empresa.json > PrefijoFacturas</i> y guárdalo con el nombre <i>VT-yyyy-MM-dd HH-mm-ss.json</i>.
+        Cambia el resto de los datos a los valores reales de tu primera factura electrónica legal.
+        Ejecuta <b>SimpleOps</b> y copia y pega (no lo cortes) el archivo JSON en <i>[CarpetaProgramas]\SimpleOps\Programa Tercero\Integración SimpleOps</i>.
+        Unos segundos después aparecerá en la misma carpeta un archivo <i>VT-yyyy-MM-dd HH-mm-ss.ok</i> que significa que la factura electrónica fue
+        generada exitosamente o <i>VT-yyyy-MM-dd HH-mm-ss.error</i> si hubo un error.
+    </p>
+
+    <p>
+        En la carpeta <i>[CarpetaProgramas]\SimpleOps\Documentos Electrónicos\[Año]\[Mes]-[Día]</i> puedes encontrar la representación gráfica (PDF) y
+        la factura electrónica (XLM) que acabas de generar. Si quieres verificar si la factura efectivamente fue aceptada por la DIAN, puedes
+        entrar a su portal de facturador y hacer clic en <i>Documentos > Enviados</i>. Si la factura eléctrónica aparece allí, habrás configurado
+        exitósamente <b>SimpleOps</b> para funcione como facturador electrónico de un programa tercero.
+    </p>
+
+    <h2 id="paso11">11. Facturación Electrónica usando Excel (Opcional)</h2>
+
+    <p>
+        Excel es un programa tercero que puedes usar en compañia de <b>SimpleOps</b> para facturar electrónicamente. 
+        Su ubicuidad y facilidad de uso lo hacen perfecto para pequeñas empresas con bajos niveles de facturación.
+    </p>
+
+    <p>
+        <b>[Pendiente]</b> Si quieres saber cómo se podría facturar electrónicamente usando Excel escríbeme a vixark@outlook.com y procuraré
+        completar esta guía.
+    </p>
+
 
 </body>
 
